Buttons and stuff

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,12 @@
     </head>
     <body>
         <h1>Stupid Website</h1> 
-        
+        <div class="game-container">
+            <div class="button" onclick="gotoPage(this, 'sudoku.html?difficulty=1')">
+                <img src="../Images/sudoku.png" width="135" height="135">
+                <p>Sudoku</p> 
+            </div>
+        </div>
 
         <span class="button" onclick="gotoPage(this, 'sudoku.html?difficulty=1')">heeheeheehaw</span>
     </body>
