--- a/HTML/sudoku.html
+++ b/HTML/sudoku.html
@@ -110,9 +110,7 @@
                 <div class="cell" data-row="8" data-col="8" onclick="selectedCell.select(this)"></div>
             </div>
         </div>
-        <br>
         <span onclick="gotoPage(this, 'index.html')" style="color: white">heeheeheehaw</span>
-        <br>
-        <span id="win-text">You Win!</span>
+        <p class="button sudoku-bottom-text">Give Up</p>
     </body>
 </html>
